Enhance page object model with reusable text retrieval method and add scenario for highest priced item checkout